--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.56.0",
     "autoprefixer": "^10.4.21",
-    "next": "14.2.5",
+    "next": "^14.2.32",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.62.0",
