--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "recharts": "^3.1.2"
   },
   "devDependencies": {
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "@eslint/eslintrc": "^3.1.0",
     "@tailwindcss/postcss": "^4.0.5",
     "@types/node": "^20",
