--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     "recharts": "^3.1.2"
   },
   "devDependencies": {
-    "babel-plugin-transform-remove-console": "^6.9.4",
     "@eslint/eslintrc": "^3.1.0",
     "@tailwindcss/postcss": "^4.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "supabase": "^2.53.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
