--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.56.0",
+    "@tanstack/react-query": "^5.90.5",
     "autoprefixer": "^10.4.21",
     "next": "^14.2.32",
     "react": "^18",
